tests/golden/reject/funcsig-reject-probe.goo
// funcsig_reject (Task 3): a func VALUE with a mismatched signature must be
// REJECTED at compile time (Go: "cannot use two (value of type func(int, int)
// int) as func(int) int value in variable declaration"). Task 1 added
// TYPE_FUNCTION structural equality to type_equals/type_compatible, so the
// mismatch is already rejected — this probe locks in the DIAGNOSTIC wording,
// which used to read "Cannot assign func to func" (type_to_string rendered
// every TYPE_FUNCTION as the literal "func") and is now the full rendered
// signature. Compiled by the `funcsig-reject-probe` Makefile target, which
// asserts a non-zero exit and greps the rendered signature in the message.
package main

func two(a int, b int) int {
	return a + b
}

func main() {
	var f func(int) int
	f = two
	_ = f
}
